--- a/app/src/main/res/layout/fragment_questionnaire_tab.xml
+++ b/app/src/main/res/layout/fragment_questionnaire_tab.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollViewQuestionnaire"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -20,13 +21,14 @@
             android:layout_marginRight="@dimen/cardMarginHorizontal"
             android:layout_marginTop="@dimen/cardMarginVertical"
             android:background="@android:color/white"
-            app:cardElevation="4dp">
+            app:cardElevation="8dp">
 
             <LinearLayout
+                android:id="@+id/llForListView"
                 android:layout_width="match_parent"
                 android:layout_height="1000dp"
-                android:orientation="vertical"
-                android:id="@+id/llForListView">
+                android:background="@color/cardview_shadow_end_color"
+                android:orientation="vertical">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/questionnaireRV"
