--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,12 @@
     <color name="colorLightBlue">#2daae1</color>
     <color name="colorGreen">#3aaa35</color>
     <color name="colorRed">#ff0000</color>
+
+    <!--CARD COLORS -->
+    <color name="cardFirst">#FFEC94</color>
+    <color name="cardSec">#FFAEAE</color>
+    <color name="cardThird">#B0E57C</color>
+    <color name="cardFifth">#B4D8E7</color>
+    <color name="cardSix">#56BAEC</color>
+
 </resources>
