--- a/app/src/main/res/layout/activity_qit.xml
+++ b/app/src/main/res/layout/activity_qit.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/back_ground_img_login">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -42,11 +43,11 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
             android:src="@drawable/ic_add_white_24dp"
             app:fab_elevationCompat="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="20dp" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.DrawerLayout>
