--- a/app/src/main/res/layout/activity_questionnaire_answers.xml
+++ b/app/src/main/res/layout/activity_questionnaire_answers.xml
@@ -5,26 +5,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/green">
+    android:background="@drawable/back_ground_img_login"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarQuestionnairesAnswersT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorMainBackground"
+        android:background="@color/colorGreen"
         app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <ScrollView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="8dp">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </ScrollView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvQuestion"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="9dp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
 </LinearLayout>
