ADDDING FIREBASE AND EVENT ACTIVITY

--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -67,6 +67,13 @@
 
         </android.support.design.widget.TextInputLayout>
 
+        <CheckBox
+            android:id="@+id/rememberCheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Remember me"
+            android:textColor="@color/colorAuthText" />
+
         <Button
             android:id="@+id/btnLogIn"
             android:layout_width="match_parent"
