Questionnarie activity fixes, cards are shows all questions from FB

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
 
     <!-- **** LIGHT STYLE **** -->
     <!--background-->
-    <color name="colorMainBackground">#edeeef</color>
+    <color name="colorMainBackground">#a800080b</color>
     <!--auth-->
     <color name="colorAuthHintText">#a800080b</color>
     <color name="colorAuthText">#ffffff</color>
