--- a/app/src/main/res/layout/item_event_card.xml
+++ b/app/src/main/res/layout/item_event_card.xml
@@ -5,7 +5,9 @@
     android:id="@+id/layout_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginTop="8dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
